# clean-mind

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  analysis_options.yaml  pubspec.yaml
.github/: dependabot.yml  pull_request_template.md  release-install.md  release-notes.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  rule_request.yml
.github/workflows/: ci.yml  release.yml
docs/: figure.js  index.html  install.sh  scene.js  site.js  styles.css  website.md
integration_test/: app_test.dart  screenshot_test.dart
lib/: main.dart  theme.dart
lib/ui/: widgets.dart
lib/util/: format.dart  platform.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
packaging/linux/: install.sh  io.github.msteja.cleanmind.desktop
rules/: apple.toml  js.toml  jvm.toml  python.toml  rust.toml  tools.toml
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/analysis/: mod.rs
rust/src/api/: insights.rs  llm.rs  mod.rs  ops.rs  scan.rs  system.rs
rust/src/config/: mod.rs
rust/src/llm/: mod.rs
rust/src/ops/: mod.rs
rust/src/rules/: mod.rs
rust/src/safety/: mod.rs
rust/src/scanner/: mod.rs
rust_builder/: pubspec.yaml
test/: delete_flow_test.dart  format_test.dart  insights_providers_test.dart  squarify_test.dart  tree_providers_test.dart
tool/: gen_app_icon_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  (+2 more)
(+35 files in other folders)
