[package]
name = "rust_lib_clean_mind"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
dirs = "6.0.0"
flutter_rust_bridge = "=2.12.0"
jwalk = "0.8.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dev-dependencies]
tempfile = "3.27.0"
