[package]
name = "rust_lib_clean_mind"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.103"
dirs = "6.0.0"
flutter_rust_bridge = "=2.12.0"
keyring = "4.1.2"
rayon = "1.12.0"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
trash = "5.2.6"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
